# mongglemongle

./: .env.example  .gitignore  CMakeLists.txt  README.md  docker-compose.yml  vcpkg.json
.github/workflows/: ci.yml
ai-hub/: Dockerfile  app.py  requirements.txt
client/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  app.cpp  index.css
client/src/api/: client.ts
client/src/auth/: AuthContext.tsx  ProtectedRoute.tsx
client/src/components/: CommentsSection.tsx  DevlogDraftDialog.tsx  EditPostDialog.tsx  FriendsBox.tsx  Layout.tsx  NotificationsBell.tsx  PostCard.tsx
client/src/components/ui/: button.tsx  input.tsx  select-visibility.tsx  textarea.tsx
client/src/pages/: Devlogs.tsx  Feed.tsx  Login.tsx  MyTimeline.tsx  Profile.tsx  Search.tsx  Signup.tsx  Snapshot.tsx
client/src/theme/: ThemeContext.tsx
docs/: DEVLOG.md  네이버카페_원문추출기_구현정리.md
e2e/: README.md  package.json  playwright.config.ts
e2e/tests/: auth_and_feed.spec.ts
include/monggle/: app_config.h  entry_service.h  event_bus.h
infra/grafana/dashboards/: monggle.json
infra/grafana/provisioning/dashboards/: monggle.yml
infra/prometheus/: prometheus.yml
infra/terraform/: README.md  main.tf
loadtest/: README.md  feed_smoke.js
scripts/: gen_dev_jwt_keys.sh
server/include/monggle/: app_config.h
server/include/monggle/ai/: ai_hub_client.h
server/include/monggle/auth/: auth_service.h  jwt_service.h  password_service.h
server/include/monggle/blocks/: blocks_service.h
server/include/monggle/cache/: icache.h  layered_cache.h  redis_cache.h  ttl_cache.h
server/include/monggle/comments/: comments_service.h
server/include/monggle/event/: event_bus.h
server/include/monggle/follows/: follows_service.h
server/include/monggle/media/: local_fs_storage.h  media_queue.h  media_service.h  minio_storage.h  permissions.h  storage.h
server/include/monggle/metrics/: metrics.h
server/include/monggle/middleware/: cors.h  rate_limiter.h  request_log.h
server/include/monggle/notifications/: notifications_service.h  stream_hub.h
server/include/monggle/posts/: posts_service.h  snapshot_service.h  snapshot_worker.h
server/include/monggle/profile/: profile_service.h
server/include/monggle/router/: router.h  routes.h
server/sql/: 001_init.sql  002_auth.sql  003_users_avatar.sql  004_post_events_restored.sql  005_posts_title.sql  006_comments_notifications.sql  007_blocks.sql  008_posts_category.sql  009_embeddings_mvp.sql
server/src/: app_config.cpp  main.cpp
server/src/ai/: ai_hub_client.cpp
server/src/auth/: auth_service.cpp  jwt_service.cpp  password_service.cpp
server/src/blocks/: blocks_service.cpp
server/src/cache/: layered_cache.cpp  redis_cache.cpp  ttl_cache.cpp
server/src/comments/: comments_service.cpp
server/src/entry/: entry_service.cpp
server/src/event/: event_bus.cpp
server/src/follows/: follows_service.cpp
server/src/media/: local_fs_storage.cpp  media_queue.cpp  media_service.cpp  minio_storage.cpp  permissions.cpp
server/src/metrics/: metrics.cpp
server/src/middleware/: cors.cpp  rate_limiter.cpp  request_log.cpp
server/src/notifications/: notifications_service.cpp  stream_hub.cpp
server/src/posts/: posts_service.cpp  snapshot_service.cpp  snapshot_worker.cpp
server/src/profile/: profile_service.cpp
server/src/router/: auth_routes.cpp  blocks_routes.cpp  comments_routes.cpp  follows_routes.cpp  media_routes.cpp  notifications_routes.cpp  posts_routes.cpp  profile_routes.cpp  router.cpp  routes.cpp  snapshot_routes.cpp
src/: app_config.cpp  auth_service.cpp  entry_service.cpp  event_bus.cpp  main.cpp  router.cpp  routes.cpp
tests/: CMakeLists.txt  api_smoke.sh  test_main.cpp  test_metrics.cpp  test_permissions.cpp  test_ttl_cache.cpp
tests/results/: .gitignore
